--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="https://www.tiktok.com/@ivoternis">TikTok</a></li>
         <li>Discord: @IvoTernis</li>
         <li>E-Mail: ivoternis@gmail.com</li>
+        <li><a href="https://modrinth.com/user/ivoternis">Modrinth</a></li>
     </ul>
 </body>
 </html>
