--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             list-style: none;
         }
 
+        ul a {
+            text-decoration: none;
+            color: #007bff;
+        }
+
+        ul a:hover {
+            text-decoration: underline;
+        }
+
         @media (max-width: 768px) {
             main {
                 padding: 10px;
@@ -68,7 +77,7 @@
     </main>
 
     <footer>
-        <a href="https://fabianternis.de">Fabian Ternis</a>
+        <a href="https://fabianternis.dev">Fabian Ternis</a>
         <a href="http://fternis.de/imprint">Impressum</a>
         <a href="http://fternis.de/privacy">Datenschutz</a>
     </footer>
