Update index.html by adding target="_blank" to all links

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
     <main>
         <h1>Meine Links</h1>
         <ul>
-            <li><a href="https://github.com/ivoternis">GitHub</a></li>
-            <li><a href="https://x.com/ivoternis">X/Twitter</a></li>
-            <li><a href="https://www.instagram.com/ivoternis">Instagram</a></li>
-            <li><a href="https://www.youtube.com/@ivoternis">YouTube</a></li>
-            <li><a href="https://www.twitch.tv/ivoternis">Twitch</a></li>
-            <li><a href="https://codepen.io/ivoternis">CodePen</a></li>
-            <li><a href="https://www.tiktok.com/@ivoternis">TikTok</a></li>
+            <li><a href="https://github.com/ivoternis" target="_blank">GitHub</a></li>
+            <li><a href="https://x.com/ivoternis" target="_blank">X/Twitter</a></li>
+            <li><a href="https://www.instagram.com/ivoternis" target="_blank">Instagram</a></li>
+            <li><a href="https://www.youtube.com/@ivoternis" target="_blank">YouTube</a></li>
+            <li><a href="https://www.twitch.tv/ivoternis" target="_blank">Twitch</a></li>
+            <li><a href="https://codepen.io/ivoternis" target="_blank">CodePen</a></li>
+            <li><a href="https://www.tiktok.com/@ivoternis" target="_blank">TikTok</a></li>
             <li>Discord: @IvoTernis</li>
             <li>E-Mail: ivoternis@gmail.com</li>
-            <li><a href="https://modrinth.com/user/ivoternis">Modrinth</a></li>
+            <li><a href="https://modrinth.com/user/ivoternis" target="_blank">Modrinth</a></li>
         </ul>
 
         <h2>Affiliate-Links</h2>
         <div class="skrime-affiliate">
             <img src="assets/img/skrime-primary.png" alt="Skrime Logo">
-            <a href="https://skrime.eu/a/ivoternis">Cheap and reliable Hosting (DE)</a>
+            <a href="https://skrime.eu/a/ivoternis" target="_blank">Cheap and reliable Hosting (DE)</a>
         </div>
     </main>
 
     <footer>
-        <a href="https://fabianternis.dev">Fabian Ternis</a>
-        <a href="http://fternis.de/imprint">Impressum</a>
-        <a href="http://fternis.de/privacy">Datenschutz</a>
+        <a href="https://fabianternis.dev" target="_blank">Fabian Ternis</a>
+        <a href="http://fternis.de/imprint" target="_blank">Impressum</a>
+        <a href="http://fternis.de/privacy" target="_blank">Datenschutz</a>
     </footer>
 </body>
 </html>
