feat: Manually merged the css-files into `styles.css`

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <meta name="author" content="Ivo Ternis">
     <meta name="language" content="de">
     <meta name="revisit-after" content="7 days">
-    <link rel="stylesheet" href="assets/css/_varibles.css">
-    <link rel="stylesheet" href="assets/css/_base.css">
-    <link rel="stylesheet" href="assets/css/_project-cards.css">
-    <link rel="stylesheet" href="assets/css/_footer.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <main>
