--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h2>Meine Modrinth Projekte</h2>
         <div id="modrinth-projects" class="project-grid"></div>
         <div id="github-activity-streak"></div>
+        <div id="chess-com-last-online"></div>
 
         <h2>Affiliate-Links</h2>
         <div class="skrime-affiliate">
