feat: Add Medium(.com)-link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="https://www.twitch.tv/ivoternis" target="_blank">Twitch</a></li>
             <li><a href="https://codepen.io/ivoternis" target="_blank">CodePen</a></li>
             <li><a href="https://www.tiktok.com/@ivoternis" target="_blank">TikTok</a></li>
+            <li><a href="https://medium.com/@ivoternis" target="_blank">Medium</a></li>
             <li>Discord: @IvoTernis</li>
             <li>E-Mail: ivoternis@gmail.com</li>
             <li><a href="https://modrinth.com/user/ivoternis" target="_blank">Modrinth</a></li>
