feat: Update link-sytles(mainly on hover)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <h1>Meine Links</h1>
-        <ul>
+        <ul class="links-list">
             <li><a href="https://github.com/ivoternis" target="_blank">GitHub</a></li>
             <li><a href="https://x.com/ivoternis" target="_blank">X/Twitter</a></li>
             <li><a href="https://www.instagram.com/ivoternis" target="_blank">Instagram</a></li>
